[main]: fix and add  usecase
